--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/owl.carousel.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/superslides.css">
-    <title>Ziyod's Project</title>
+    <title>Trump's Project</title>
 </head>
 
 <body>
